[package]
name = "rustls-libcrux-provider"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "A rustls crypto provider based on libcrux."

[dependencies]
rustls = { version = "0.23.18" }

libcrux = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }
libcrux-sha2 = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }
libcrux-hmac = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }
libcrux-ed25519 = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }
libcrux-traits = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }
libcrux-ml-kem = { git = "https://github.com/cryspen/libcrux", rev = "8ebe732" }

der = "0.7"
hpke-rs = "0.3"
hpke-rs-crypto = "0.3"
hpke-rs-rust-crypto = "0.3"
pkcs8 = "0.10.2"
pkcs1 = "0.7.5"
pki-types = { package = "rustls-pki-types", version = "1" }
rand_core = { version = "0.9", features = ["os_rng"] }
webpki = { package = "rustls-webpki", version = "0.102", features = [
    "alloc", "aws_lc_rs",
], default-features = false }

[dev-dependencies]
env_logger = "0.11"
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
webpki-roots = "0.26"

[features]
default = ["std"]
std = ["hpke-rs/std", "hpke-rs-crypto/std", "pkcs8/std", "rustls/std"]
